--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-router": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
